--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,24 +11,61 @@ services:
 stages:
   - prepare
   - install
-  
-# before_script:
-#   # - docker login -u "${CI_REGISTRY_USER}" -p "${CI_JOB_TOKEN}" "${CI_REGISTRY}"
-#   - docker login -u ek -p ek "${CI_REGISTRY}"
-#   - mkdir -p ~/.ssh/
-#   - echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-#   - chmod 600  -Rf ~/.ssh
-#   - mv ansible.cfg /root/.ansible.cfg
-#   - mv inventory /root/
-#   # - cat ~/.ssh/id_rsa
 
-deploy:
-  # <<: *default_tags
+.common_runner: &common_runner
+  retry: 1
+  only:
+    - master
+  tags:
+    - docker
+  cache:
+    # key: "$CI_COMMIT_REF_SLUG"
+    # policy: push
+    paths:
+      # - /root/.ssh
+      - /tmp/ansible
+
+before_script:
+  # - docker login -u "${CI_REGISTRY_USER}" -p "${CI_JOB_TOKEN}" "${CI_REGISTRY}"
+  - docker login -u ek -p ek "${CI_REGISTRY}"
+  - mkdir -p ~/.ssh/
+  - echo "${SSH_PRIVATE_KEY}" > ~/.ssh/id_rsa
+  - chmod 600  -Rf ~/.ssh
+  - mv ansible.cfg /root/.ansible.cfg
+  - mv inventory /root/
+  # - cat ~/.ssh/id_rsa
+
+syntax_checking:
+  <<: *common_runner
   stage: prepare
   script:
-    - pwd
-  # only:
-  #   - master
-  # when: manual
-  
+    - for job in  `ls *.yml`; do ansible-playbook $job --syntax-check; done
 
+
+deploy_bridge:
+  <<: *common_runner
+  stage: install
+  script:
+    - ansible-playbook -v deploy.yml -e CI_JOB_URL="\"$CI_JOB_URL\"" -e running_host_group=bridge
+  when: manual
+  
+deploy_nginx:
+  <<: *common_runner
+  stage: install
+  script:
+    - ansible-playbook -v deploy.yml -e CI_JOB_URL="\"$CI_JOB_URL\"" -e running_host_group=nginx
+  when: manual
+  
+deploy_jenkins:
+  <<: *common_runner
+  stage: install
+  script:
+    - ansible-playbook -v deploy.yml -e CI_JOB_URL="\"$CI_JOB_URL\"" -e running_host_group=jenkins
+  when: manual
+  
+deploy_sys:
+  <<: *common_runner
+  stage: install
+  script:
+    - ansible-playbook -v deploy.yml -e CI_JOB_URL="\"$CI_JOB_URL\"" -e running_host_group=sys
+  when: manual
