--- a/deploy.yml
+++ b/deploy.yml
@@ -1,5 +1,6 @@
 ---
-- name: Deploy ansible-pull to remote servers
+
+- name: "Deploy ansible-pull to remote servers"
   hosts:
     - "{{ running_host_group }}"
   become_user: root
@@ -10,7 +11,7 @@
   #     dnf: name=* state=latest
 
   roles:
-    - pull
+  - pull
 
   # post_tasks:
   #   - name: post tasks
