--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,25 +48,25 @@ deploy_bridge:
   stage: installation
   script:
     - ansible-playbook -v deploy.yml -e CI_JOB_URL="\"$CI_JOB_URL\"" -e running_host_group=bridge
-  when: manual
+  # when: manual
   
 deploy_nginx:
   <<: *common_runner
   stage: installation
   script:
     - ansible-playbook -v deploy.yml -e CI_JOB_URL="\"$CI_JOB_URL\"" -e running_host_group=nginx
-  when: manual
+  # when: manual
   
 deploy_jenkins:
   <<: *common_runner
   stage: installation
   script:
     - ansible-playbook -v deploy.yml -e CI_JOB_URL="\"$CI_JOB_URL\"" -e running_host_group=jenkins
-  when: manual
+  # when: manual
   
 deploy_sys:
   <<: *common_runner
   stage: installation
   script:
     - ansible-playbook -v deploy.yml -e CI_JOB_URL="\"$CI_JOB_URL\"" -e running_host_group=sys
-  when: manual
+  # when: manual
