--- a/ansible.cfg
+++ b/ansible.cfg
@@ -13,5 +13,5 @@ fact_caching_connection = /tmp/ansible/facts/cache
 [ssh_connection]
 pipelining = True
 ; ssh_args=-o ForwardAgent=yes  -o ControlMaster=auto -o ControlPersist=60s -o "ProxyCommand ssh -A -i ~/.ssh/id_rsa.server root@47.100.214.33 nc %h %p"
-ssh_args=-o ForwardAgent=yes  -o ControlMaster=auto -o ControlPersist=60s
+ssh_args=-o ForwardAgent=yes  -o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
 control_path = /tmp/ansible-ssh-%%h-%%p-%%r
